# INT3505E_02_demo

./: library.db
Week10/: swagger.yaml
Week10/openapi_server/: __main__.py  db_models.py
Week10/openapi_server/controllers/: extensions.py  product_controller.py
Week10/openapi_server/models/: product.py
Week10/openapi_server/openapi/: openapi.yaml
Week10/openapi_server/test/: test_product_controller.py
Week11/: main.py  pyproject.toml
Week11/openapi_server/: db_models.py
Week11/openapi_server/controllers/: product_controller.py  webhook_controller.py
Week11/openapi_server/models/: error.py  product_input.py
Week11/openapi_server/openapi/: openapi.yaml
Week11/openapi_server/services/: webhook_service.py
Week3/: book-v1.py  book-v2.py  book-v3.py  book-v4.py  index.html  server.js  test.py
Week4/: app.py
Week5/: book.py
Week5/static/: swagger.yaml
Week6/: book.http  book.py
Week6/static/: swagger.yaml
Week7/: setup.py
Week7/.openapi-generator/: FILES
Week7/openapi_server/: __main__.py
Week7/openapi_server/controllers/: product_controller.py
Week7/openapi_server/models/: __init__.py
Week8/: Product API Env.postman_environment.json  Product API Test.postman_collection.json  api-test-report.html
Week9/: book_header.py  book_query.py  book_uri.py
Week9/static/: swagger-v1.yaml  swagger-v2.yaml  swagger-v3.yaml
