[project]
name = "week10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "connexion[swagger-ui]<=2.14.2 ; python_full_version >= '3.5'",
    "connexion[swagger-ui]<=2.3.0 ; python_full_version >= '3.4' and python_full_version < '3.6'",
    "connexion[swagger-ui]>=2.6.0 ; python_full_version >= '3.6'",
    "flask==2.1.1",
    "flask-limiter>=3.11.0",
    "gunicorn>=23.0.0",
    "mongoengine>=0.29.1",
    "prometheus-flask-exporter>=0.23.2",
    "python-dateutil>=2.6.0",
    "setuptools>=21.0.0",
    "swagger-ui-bundle>=0.0.2",
    "werkzeug==0.16.1 ; python_full_version >= '3.4' and python_full_version < '3.6'",
]
